--- a/public/css/style.css
+++ b/public/css/style.css
@@ -130,8 +130,7 @@ h6,
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(118, 166, 218, 0.85);
-    opacity: 0.8;
+    background: rgba(118, 166, 218, 0.35);
     z-index: 1;
 }
 
@@ -289,7 +288,8 @@ h6,
 
 
 .nae{
-    background-color: #06A3DA;
+    background: hsla(200, 100%, 60%, 0.85);
+
     margin: 0 auto;
     text-align: center;
     font-size: 8px;
